--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
    
         <header>
                 <div id="container">
-                        <div id="logo">Le nom de mon site</div>
+                        <div id="logo">site</div>
                         <div class="logo">slogan du site</div>
                         <div id="seach-items">
                             <div><input type="text"></div>
