--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                         <div class="logo">slogan du site</div>
                         <div id="seach-items">
                             <div><input type="text"></div>
-                            <div><input type="submit"></div>
+                            <div><input type="checkbox"></div>
                         </div>
                 </div>
                        
